--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "description": "",
     "dependencies": {
         "body-parser": "^1.20.3",
+        "cookie-parser": "^1.4.7",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.7",
         "ejs": "^3.1.10",
         "express": "^4.21.2",
+        "express-session": "^1.18.1",
         "groq-sdk": "^0.15.0",
+        "jsonwebtoken": "^9.0.2",
+        "lodash": "^4.17.21",
         "mysql": "^2.18.1",
         "nodemon": "^3.1.9",
+        "toastify-js": "^1.12.0",
         "twitter-api-v2": "^1.19.1"
     },
     "settings": {
